--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">ShoppingList</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_stock_list">ScrollingActivity</string>
+    <string name="btnTitle_Stock">Stocks</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
