--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,36 @@
 <resources>
+
+    <!-- BEGIN MAIN -->
     <string name="app_name">ShoppingList</string>
-    <string name="title_activity_test">TestActivity</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="title_activity_test">TEST</string>
+    <!-- END MAIN -->
+
+    <!-- BEGIN ACTIONS -->
+    <string name="delete">Delete</string>
+    <string name="delete_all">Delete all</string>
+    <string name="delete_all_data">Delete all data stored</string>
+    <string name="cancel">Cancel</string>
+    <!-- END ACTIONS -->
+
+    <!-- BEGIN MESSAGES -->
+    <string name="warnig_dialog">Warning</string>
+    <string name="info_msg_shopping_list_deleted">"The shopping list '%1$s' has been deleted."</string>
+    <!-- END MESSAGES -->
+
+    <!-- BEGIN STOCK -->
     <string name="title_activity_stock_list">ScrollingActivity</string>
-    <string name="btnTitle_Stock">Stocks</string>
+    <string name="stocks">Stocks</string>
+    <string name="stock">Stock</string>
+    <!-- END STOCK -->
+
+    <!-- BEGIN SHOPPING LIST -->
+    <string name="shopping_lists">Shopping Lists</string>
+    <string name="shopping_list">Shopping List</string>
+    <string name="stock_shopping_lists">Stock Shopping Lists</string>
+    <!-- END SHOPPING LIST -->
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -92,5 +120,5 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="action_settings">Settings</string>
+
 </resources>
