Implementacion de StockActivity y StockListActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <!-- BEGIN MESSAGES -->
     <string name="warnig_dialog">Warning</string>
     <string name="info_msg_shopping_list_deleted">"The shopping list '%1$s' has been deleted."</string>
+    <string name="info_msg_stock_deleted">"The stock '%1$s' has been deleted."</string>
+
     <!-- END MESSAGES -->
 
     <!-- BEGIN STOCK -->
@@ -30,6 +32,8 @@
     <string name="shopping_list">Shopping List</string>
     <string name="stock_shopping_lists">Stock Shopping Lists</string>
     <!-- END SHOPPING LIST -->
+
+
 
     <string name="large_text">
         "Material is the metaphor.\n\n"
