Correcion de volver de StockList al Main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!-- END MESSAGES -->
 
     <!-- BEGIN STOCK -->
-    <string name="title_activity_stock_list">ScrollingActivity</string>
+    <string name="title_activity_stock_list">Stock List</string>
     <string name="stocks">Stocks</string>
     <string name="stock">Stock</string>
     <!-- END STOCK -->
