--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
 
     <!-- BEGIN ACTIONS -->
     <string name="delete">Delete</string>
-    <string name="delete_all">Delete all</string>
     <string name="delete_all_data">Delete all data stored</string>
     <string name="cancel">Cancel</string>
     <string name="create">Create</string>
@@ -22,7 +21,9 @@
     <string name="info_msg_product_list_deleted">"%1$s '%2$s' has been deleted."</string>
     <string name="blank_name_input_error">You must type a name.</string>
     <string name="unexpected_error">"Oops! This error shouldn't have occurred."</string>
-    <string name="delete_warning">"Are you sure you want to delete %1$s: '%2$s'"</string>
+    <string name="delete_warning">"Are you sure you want to delete %1$s: '%2$s'?"</string>
+    <string name="delete_all_data_warning">"WARNING! This operation can't be undone. Are you sure you want to delete all the data stored?</string>
+    <string name="info_msg_all_data_deleted">All data stored was deleted successfully.</string>
     <!-- END MESSAGES & QUESTIONS -->
 
     <!-- BEGIN STOCK -->
