--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- BEGIN MAIN -->
     <string name="app_name">ShoppingList</string>
@@ -21,6 +21,9 @@
     <string name="info_msg_product_list_deleted">"%1$s '%2$s' has been deleted."</string>
     <string name="info_msg_product_list_updated">"%1$s has been updated with the name: '%2$s'."</string>
     <string name="delete_warning">"Are you sure you want to delete %1$s: '%2$s'?"</string>
+    <string name="enter_the_product_name">"Enter %1$s name:"</string>
+    <string name="info_msg_product_created">"%1$s '%2$s' has been created successfully."</string>
+    <string name="info_msg_product_deleted">"%1$s '%2$s' has been deleted."</string>
     <string name="delete_all_data_warning">"WARNING! This operation can't be undone. Are you sure you want to delete all the data stored?</string>
     <string name="info_msg_all_data_deleted">All data stored was deleted successfully.</string>
     <!-- END MESSAGES & QUESTIONS -->
@@ -34,6 +37,8 @@
     <!-- BEGIN WORDS -->
     <string name="name">Name</string>
     <string name="code">Code</string>
+    <string name="target_amount">Target Amount</string>
+    <string name="current_amount" tools:ignore="DuplicateDefinition">Current Amount</string>
     <!-- END WORDS -->
 
     <!-- BEGIN STOCK -->
@@ -43,6 +48,20 @@
     <string name="the_stock">the stock</string>
     <string name="upCase_the_stock">The stock</string>
     <!-- END STOCK -->
+
+    <!-- BEGIN STOCKPRODUCT -->
+    <string name="title_activity_stock_product">Stock Product</string>
+    <string name="stock_product">Stock Product</string>
+    <string name="the_stock_product">the stock product</string>
+    <string name="upCase_the_stock_product">The stock product</string>
+    <!-- END STOCKPRODUCT -->
+
+    <!-- BEGIN PRODUCT -->
+    <string name="title_activity_product">Stock List</string>
+    <string name="product">Product</string>
+    <string name="the_product">the product</string>
+    <string name="upCase_the_product">The product</string>
+    <!-- END PRODUCT -->
 
     <!-- BEGIN SHOPPING LIST -->
     <string name="shopping_lists">Shopping Lists</string>
