--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="create">Create</string>
     <string name="edit_name">Edit name</string>
     <string name="update">Update</string>
+    <string name="discard">Discard</string>
+    <string name="save">Save</string>
     <!-- END ACTIONS -->
 
     <!-- BEGIN MESSAGES & QUESTIONS -->
@@ -24,6 +26,7 @@
     <string name="enter_the_product_name">"Enter %1$s name:"</string>
     <string name="delete_all_data_warning">"WARNING! This operation can't be undone. Are you sure you want to delete all the data stored?</string>
     <string name="info_msg_all_data_deleted">All data stored was deleted successfully.</string>
+    <string name="info_msg_stock_shopping_list_created">"The shopping list has been created succesfully with the name '%1$s'."</string>
     <!-- END MESSAGES & QUESTIONS -->
 
     <!-- BEGIN ERROR MSG -->
@@ -50,6 +53,8 @@
     <string name="product">Product</string>
     <string name="the_product">the product</string>
     <string name="upCase_the_product">The product</string>
+    <string name="purchased_products">Purchased products:</string>
+    <string name="products_to_purchase">Products to purchase:</string>
     <!-- END PRODUCT -->
 
     <!-- BEGIN SHOPPING LIST -->
