--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,12 +18,12 @@
 
     <!-- BEGIN MESSAGES & QUESTIONS -->
     <string name="warning">Cuidado</string>
-    <string name="enter_the_product_list_name">"Introduce el nombre de %1$s"</string>
-    <string name="info_msg_entity_created">"%1$s '%2$s' ha sido creada con éxito."</string>
+    <string name="enter_the_product_list">"Introduce %1$s:"</string>
+    <string name="info_msg_entity_created">"%1$s '%2$s' ha sido creado con éxito."</string>
     <string name="info_msg_entity_deleted">"%1$s '%2$s' ha sido eliminado."</string>
     <string name="info_msg_entity_updated">"%1$s ha sido actualizado con el nombre: '%2$s'."</string>
     <string name="delete_warning">"¿Estás seguro que quieres eliminar %1$s: '%2$s'?"</string>
-    <string name="enter_the_product_name">"Introduce el nombre de %1$s:"</string>
+    <string name="enter_the_product">"Introduce %1$s:"</string>
     <string name="delete_all_data_warning">"¡CUIDADO! Esta operación no puede ser desecha. ¿Estás seguro que quieres eliminar todos los datos almacenados?</string>
     <string name="info_msg_all_data_deleted">Todos los datos almacenados han sido eliminados con éxito.</string>
     <string name="info_msg_stock_shopping_list_created">"La lista de la compra del inventario ha sido creada con éxito con el nombre: '%1$s'."</string>
@@ -33,8 +33,10 @@
     <string name="src_error">"¡Ups! Algo no está funcionando correctamente"</string>
     <string name="unexpected_error">"¡Ups! Este error no debería haber ocurrido."</string>
     <string name="blank_name_input_error">"El nombre no puede estar vacío."</string>
+    <string name="blank_amount_input_error">"La cantidad no puede estar vacía."</string>
     <string name="blank_target_amount_input_error">"La cantidad objetivo no puede estar vacía."</string>
     <string name="blank_current_amount_input_error">"La cantidad actual no puede estar vacía."</string>
+    <string name="invalid_amount_input_error">"La cantidad debe ser mayor que 0."</string>
     <string name="invalid_target_amount_input_error">"La cantidad objetivo debe ser mayor que 0."</string>
     <string name="invalid_current_amount_input_error">"La cantidad actual debe ser mayor o igual que la cantidad objetivo."</string>
     <string name="not_a_number_input_error">"El número no debe tener decimales."</string>
@@ -66,12 +68,6 @@
     <string name="finish_shopping">Finalizar Compra</string>
     <string name="shopping_summary">Resumen de la compra</string>
     <!-- END SHOPPING LIST -->
-
-    <!-- BEGIN STOCKPRODUCT -->
-    <string name="stock_product">Producto de Inventario</string>
-    <string name="the_stock_product">el producto de inventario</string>
-    <string name="upCase_the_stock_product">El producto de inventario</string>
-    <!-- END STOCKPRODUCT -->
 
     <!-- BEGIN STOCK -->
     <string name="title_activity_stock_list">Lista de Inventarios</string>
