--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- BEGIN MAIN -->
-    <string name="app_name">ShoppingList</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Shop2Go</string>
     <!-- END MAIN -->
 
     <!-- BEGIN ACTIONS -->
